--- a/Cek/Index.html
+++ b/Cek/Index.html
@@ -6,17 +6,17 @@
   <body>
     <!-- NAV BAR -->
     <div class="nav-cont">
-      <ul>
-        <li>HOME</li>
-        <li>ABOUT ME</li>
-        <li>CONTACT ME</li>
+      <ul class = "ul-nav">
+        <li class ="li-nav">HOME</li>
+        <li class ="li-nav">ABOUT ME</li>
+        <li class ="li-nav">CONTACT ME</li>
       </ul>
     </div>
     <!-- NAV BAR END -->
     
     <!--conten 1-->
-    <div>
-      <img src="Screenshot_2023-05-19-08-46-00-24.png" height="200" width="200" />
+    <div class = "content-cont">
+      <img src="Screenshot_2023-05-19-08-46-00-24.png" class = "img-content" />
     </div>
     <!--conten END-->
     
